[gd_scene load_steps=4 format=2]

[ext_resource path="res://completed-examples/scripts/BombCoin.gd" type="Script" id=1]
[ext_resource path="res://resources/spine-skeletons/coin/coin_dataresource.tres" type="SpineSkeletonDataResource" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 142, 149.5 )

[node name="BombCoin" type="Node2D"]
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 1 )

[node name="Coin" type="SpineSprite" parent="."]
skeleton_data_res = ExtResource( 2 )
preview_skin = "Bomb"
preview_animation = "idle"
preview_frame = false
preview_time = 0.0

[node name="CoinArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoinArea"]
position = Vector2( -1, -9 )
shape = SubResource( 1 )
disabled = true

[node name="GetBombTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="animation_completed" from="Coin" to="." method="_on_Coin_animation_completed"]
[connection signal="body_entered" from="CoinArea" to="." method="_on_CoinArea_body_entered"]
[connection signal="timeout" from="GetBombTimer" to="." method="_on_GetBombTimer_timeout"]
